--- a/th/index.html
+++ b/th/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
     <meta name="author" content="Natthaphon Jaroenthat">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.jdmbkk.org/">
+    <link rel="canonical" href="https://www.tannatthaphon.online/">
     <meta name="geo.region" content="TH-10" />
     <meta name="geo.placename" content="Bang kapi, Bangkok" />
     <meta name="geo.position" content="13.753303;100.619074" />
@@ -16,15 +16,15 @@
     <meta property="og:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์">
     <meta property="og:description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) ย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.jdmbkk.org/">
-    <meta property="og:image" content="https://www.jdmbkk.org/og-cover.webp">
+    <meta property="og:url" content="https://www.tannatthaphon.online/">
+    <meta property="og:image" content="https://www.tannatthaphon.online/og-cover.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="คริสตจักรสาวกพระเยซูกรุงเทพ">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์">
     <meta name="twitter:description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) ย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
-    <meta name="twitter:image" content="https://www.jdmbkk.org/og-cover.webp">
+    <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
     <meta name="theme-color" content="#ffffff">
     <link rel="icon" type="image/png" href="../logo.png">
     <link rel="apple-touch-icon" href="../logo.png">
@@ -42,7 +42,7 @@
       "name": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์",
       "description": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) ย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
       "alternateName": ["คริสตจักรสาวกพระเยซูกรุงเทพ","JDM Bangkok", "JDMBKK", "JDM TH"],
-      "image": "https://www.jdmbkk.org/cover.webp",
+      "image": "https://www.tannatthaphon.online/cover.webp",
       "telephone": "+66 092 552 0263",
       "address": {
         "@type": "PostalAddress",
@@ -52,13 +52,13 @@
         "postalCode": "10240",
         "addressCountry": "TH"
       },
-      "url": "https://www.jdmbkk.org",
+      "url": "https://www.tannatthaphon.online/",
       "sameAs": [
       "https://www.facebook.com/JDMBKKTH/",
       "https://www.instagram.com/jdmbangkok/"
       ],
-      "@id": "https://www.jdmbkk.org/#church",
-      "logo": "https://www.jdmbkk.org/logo.png",
+      "@id": "https://www.tannatthaphon.online/#church",
+      "logo": "https://www.tannatthaphon.online/logo.png",
       "openingHoursSpecification": [{
         "@type": "OpeningHoursSpecification",
         "dayOfWeek": "Sunday",
