--- a/th/index.html
+++ b/th/index.html
@@ -26,8 +26,8 @@
     <meta name="twitter:description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) ย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
     <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon" type="image/png" href="../logo.png">
-    <link rel="apple-touch-icon" href="../logo.png">
+    <link rel="icon" type="image/png" href="https://www.tannatthaphon.online/logo.png">
+    <link rel="apple-touch-icon" href="https://www.tannatthaphon.online/logo.png">
     <meta property="og:locale" content="th_TH">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
