--- a/th/index.html
+++ b/th/index.html
@@ -233,7 +233,7 @@
     <p class="copyright">© 2024 คริสตจักรสาวกพระเยซูกรุงเทพ | JDM Bangkok Thailand สงวนลิขสิทธิ์</p>
    </footer>
   </div>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
   
 </html>
