--- a/404.html
+++ b/404.html
@@ -6,46 +6,51 @@
 <title>404</title>
 
 <style>
-/* ========== BASE ========== */
+/* ===== BASE ===== */
 body{
   margin:0;
-  height:100vh;
+  min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  background:#0b1220;
-  color:#fff;
+  background:#ffffff;
+  color:#111;
   font-family:system-ui,sans-serif;
-  overflow:hidden;
   text-align:center;
   cursor:pointer;
 }
 
 .wrapper{
-  max-width:420px;
   width:100%;
+  max-width:420px;
   padding:1rem;
+  box-sizing:border-box;
 }
 
-/* ========== VIDEO ========== */
+/* ===== VIDEO (Portrait) ===== */
 video{
   width:100%;
   max-width:360px;
+  aspect-ratio: 9 / 16;   /* สำคัญมากสำหรับ 720×1280 */
+  object-fit: cover;
+  background:#fff;
   border-radius:16px;
-  box-shadow:
-    0 20px 40px rgba(0,0,0,.6),
-    0 0 24px rgba(255,255,255,.15);
 }
 
-/* ========== TEXT ========== */
-h1{ margin:.8rem 0 .2rem; }
-p{ opacity:.85; }
+/* ===== TEXT ===== */
+h1{
+  margin:.6rem 0 .2rem;
+}
+p{
+  opacity:.75;
+  margin:0;
+}
 
-/* ========== PROGRESS ========== */
+/* ===== PROGRESS ===== */
 .progress{
   width:100%;
   height:4px;
-  background:rgba(255,255,255,.2);
+  background:#e5e5e5;
   border-radius:99px;
   margin:1rem auto 0;
   overflow:hidden;
@@ -54,12 +59,14 @@ p{ opacity:.85; }
   display:block;
   height:100%;
   width:0;
-  background:#fff;
+  background:#111;
 }
 
 /* motion sensitive */
 @media (prefers-reduced-motion: reduce){
-  .progress span{ animation:none!important }
+  .progress span{
+    animation:none!important;
+  }
 }
 </style>
 </head>
@@ -68,9 +75,9 @@ p{ opacity:.85; }
 
 <div class="wrapper">
 
-  <!-- 🎬 VIDEO 720P -->
+  <!-- 🎬 VIDEO 10s | 720×1280 -->
   <video id="vid" autoplay muted playsinline>
-    <source src="404-720p.mp4" type="video/mp4">
+    <source src="404-10s-720x1280.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
@@ -84,16 +91,16 @@ p{ opacity:.85; }
 </div>
 
 <script>
-/* ========== LANGUAGE ========== */
+/* ===== LANGUAGE ===== */
 const lang = navigator.language || "en";
 
 const text = {
   th:{
-    desc:"หน้านี้หายไปแล้ว เดี๋ยวพากลับบ้านให้นะ 🙂",
+    desc:"หน้านี้หายไปแล้ว กำลังพากลับหน้าแรก 🙂",
     redirect:"/th/"
   },
   en:{
-    desc:"This page is lost. Taking you home 🙂",
+    desc:"This page is lost. Redirecting you home 🙂",
     redirect:"/en/"
   },
   ko:{
@@ -108,27 +115,32 @@ const locale =
 
 document.getElementById("desc").textContent = text[locale].desc;
 
-/* ========== DEVICE TIMING ========== */
-const isMobile = matchMedia("(max-width:768px)").matches;
-const DURATION = isMobile ? 10 : 13; // วินาที
+/* ===== VIDEO DURATION ===== */
+const DURATION = 10; // วิดีโอ 10 วิ
 
-/* ========== PROGRESS BAR ========== */
+/* ===== PROGRESS BAR ===== */
 const bar = document.getElementById("bar");
 bar.animate(
   [{ width:"0%" }, { width:"100%" }],
-  { duration: DURATION*1000, fill:"forwards", easing:"linear" }
+  {
+    duration: DURATION * 1000,
+    fill: "forwards",
+    easing: "linear"
+  }
 );
 
-/* ========== SKIP / REDIRECT ========== */
-let skipped=false;
+/* ===== REDIRECT / SKIP ===== */
+let skipped = false;
 function goHome(){
   if(skipped) return;
-  skipped=true;
+  skipped = true;
   location.href = text[locale].redirect;
 }
 
-setTimeout(goHome, DURATION*1000);
+// เล่นจบ 10 วิ → redirect
+setTimeout(goHome, DURATION * 1000);
 
+// คลิก / กดคีย์ = ข้ามทันที
 document.body.addEventListener("click", goHome);
 document.body.addEventListener("keydown", goHome);
 </script>
