--- a/th/index.html
+++ b/th/index.html
@@ -1,75 +1,107 @@
 <!DOCTYPE html>
 <html lang="th">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์ 10:00–12:00 น.</title>
-    <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
-    <meta name="author" content="Natthaphon Jaroenthat">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.tannatthaphon.online/">
-    <meta name="geo.region" content="TH-10" />
-    <meta name="geo.placename" content="Bang kapi, Bangkok" />
-    <meta name="geo.position" content="13.753303;100.619074" />
-    <meta name="ICBM" content="13.753303, 100.619074" />
-    <meta property="og:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์">
-    <meta property="og:description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) ย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.tannatthaphon.online/">
-    <meta property="og:image" content="https://www.tannatthaphon.online/og-cover.webp">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:site_name" content="คริสตจักรสาวกพระเยซูกรุงเทพ">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์">
-    <meta name="twitter:description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) ย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
-    <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="icon" type="image/png" href="https://www.tannatthaphon.online/logo.png">
-    <link rel="apple-touch-icon" href="https://www.tannatthaphon.online/logo.png">
-    <meta property="og:locale" content="th_TH">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
-    <script src="/_sdk/element_sdk.js" defer></script>
-    <style>@view-transition { navigation: auto; }</style>
-    <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
-    <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
-    <script type="application/ld+json">
-      {"@context": 
-      "https://schema.org",
-      "@type": "Church",
-      "name": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์",
-      "description": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) ย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
-      "alternateName": ["คริสตจักรสาวกพระเยซูกรุงเทพ","JDM Bangkok", "JDMBKK", "JDM TH"],
-      "image": "https://www.tannatthaphon.online/cover.webp",
-      "telephone": "+66 092 552 0263",
-      "hasMap": "https://maps.google.com/?q=13.753303,100.619074",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "64 ซอยรามคำแหง 24 แยก 6",
-        "addressLocality": "แขวงหัวหมาก",
-        "addressRegion": "เขตบางกะปิ",
-        "postalCode": "10240",
-        "addressCountry": "TH"
-      },
-      "url": "https://www.tannatthaphon.online/",
-      "sameAs": [
+  <!-- ================= BASIC ================= -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- ================= TITLE & DESCRIPTION ================= -->
+  <title>คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์ 10:00–12:00 น.</title>
+  <meta name="description"
+        content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+
+  <!-- ================= SEO ================= -->
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.tannatthaphon.online/">
+  <meta name="author" content="Natthaphon Jaroenthat">
+
+  <!-- ================= GEO (LOCAL SEO) ================= -->
+  <meta name="geo.region" content="TH-10">
+  <meta name="geo.placename" content="Bang Kapi, Bangkok">
+  <meta name="geo.position" content="13.753303;100.619074">
+  <meta name="ICBM" content="13.753303, 100.619074">
+
+  <!-- ================= OPEN GRAPH ================= -->
+  <meta property="og:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
+  <meta property="og:description" content="คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.tannatthaphon.online/">
+  <meta property="og:image" content="https://www.tannatthaphon.online/og-cover.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="คริสตจักรสาวกพระเยซูกรุงเทพ">
+  <meta property="og:locale" content="th_TH">
+
+  <!-- ================= TWITTER ================= -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
+  <meta name="twitter:description" content="นมัสการวันอาทิตย์ 10:00–12:00 น.">
+  <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
+
+  <!-- ================= THEME ================= -->
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- ================= FAVICON (BEST PRACTICE) ================= -->
+  <!-- SVG (modern browsers) -->
+  <link rel="icon" type="image/svg+xml" href="/logo.svg">
+  <!-- PNG fallback -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <!-- iOS -->
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <!-- Legacy -->
+  <link rel="icon" href="/favicon.ico">
+
+  <!-- ================= FONTS ================= -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- ================= CSS ================= -->
+  <link rel="stylesheet" href="/style.css">
+
+  <!-- ================= JS ================= -->
+  <script src="/_sdk/element_sdk.js" defer></script>
+  <script src="/_sdk/data_sdk.js" defer></script>
+
+  <!-- ⚠️ Tailwind CDN (ใช้ได้ แต่แนะนำเฉพาะ dev / prototype) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- ================= STRUCTURED DATA ================= -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Church",
+    "@id": "https://www.tannatthaphon.online/#church",
+    "name": "คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)",
+    "alternateName": ["JDM Bangkok", "JDMBKK", "JDM TH"],
+    "description": "คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
+    "url": "https://www.tannatthaphon.online/",
+    "logo": "https://www.tannatthaphon.online/logo.png",
+    "image": "https://www.tannatthaphon.online/cover.webp",
+    "telephone": "+66 92 552 0263",
+    "hasMap": "https://maps.google.com/?q=13.753303,100.619074",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "64 ซอยรามคำแหง 24 แยก 6 แขวงหัวหมาก เขตบางกะปิ",
+      "addressRegion": "Bangkok",
+      "postalCode": "10240",
+      "addressCountry": "TH"
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": "Sunday",
+      "opens": "10:00",
+      "closes": "12:00"
+    }],
+    "sameAs": [
       "https://www.facebook.com/JDMBKKTH/",
       "https://www.instagram.com/jdmbangkok/"
-      ],
-      "@id": "https://www.tannatthaphon.online/#church",
-      "logo": "https://www.tannatthaphon.online/logo.png",
-      "openingHoursSpecification": [{
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": "Sunday",
-        "opens": "10:00",
-        "closes": "12:00"
-      }]
-      }
-    </script>
-  </head>
+    ]
+  }
+  </script>
+</head>
+
   <body>
     <nav>
       <a href="index.html">Home</a>
