--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
     ]
   }
   </script>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/print.css" media="print">
-<link rel="stylesheet" href="css/variables.css">
-<link rel="stylesheet" href="css/home.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/style.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
   <style>@view-transition { navigation: auto; }</style> 
  </head>
  <body>
-  <div data-include="/partials/header.html"></div>
+  <div data-include="https://www.tannatthaphon.online/partials/header.html"></div>
 
-<script src="/js/include.js"></script>
+<script src="https://www.tannatthaphon.online/js/include.js"></script>
 
 <script>
   document.addEventListener('includesLoaded', () => {
@@ -88,11 +88,15 @@
   <main class="main-content">
     <h1>นี่คือหน้าแรก</h1>
   </main>
-  <div data-include="/partials/footer.html"></div>
+  <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
 
   <script>
     
   </script>
-  <script src="js/main.js"></script>
+  <script src="https://www.tannatthaphon.online/js/main.js"></script>
+  <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
+  <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
+  <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
+  <script src="https://www.tannatthaphon.online/smooth.js"></script>
     </body>
 </html>
