--- a/sermon/index.html
+++ b/sermon/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) | นมัสการวันอาทิตย์ 10:00–12:00 น.</title>
+  <title>คริสตจักรสาวกพระเยซูกรุงเทพ | หน้าแรก</title>
   <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.tannatthaphon.online/">
@@ -32,11 +32,8 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <meta name="apple-mobile-web-app-title" content="JDM BKK">
-  <link rel="manifest" href="../site.webmanifest">
-  <script src="/_sdk/element_sdk.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&amp;family=Kanit:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
+  <link rel="manifest" href="../assets/images/site.webmanifest">
+  <script src="../js/sdk.js"></script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -69,15 +66,16 @@
     ]
   }
   </script>
-<link rel="stylesheet" href="../css/style.css">
-<link rel="stylesheet" href="../css/print.css" media="print">
-<link rel="stylesheet" href="../css/variables.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/style.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
+<link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
   <style>@view-transition { navigation: auto; }</style> 
  </head>
  <body>
-  <div data-include="/partials/header.html"></div>
+  <div data-include="https://www.tannatthaphon.online/partials/header.html"></div>
 
-<script src="/js/include.js"></script>
+<script src="https://www.tannatthaphon.online/js/include.js"></script>
 
 <script>
   document.addEventListener('includesLoaded', () => {
@@ -88,13 +86,17 @@
        MAIN BODY CONTENT (ส่วนเนื้อหาหลัก)
   ======================================== -->
   <main class="main-content">
-   
+    <h1>นี่คือหน้าแรก</h1>
   </main>
-  <div data-include="/partials/footer.html"></div>
+  <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
 
   <script>
     
   </script>
-  <script src="js/main.js"></script>
+  <script src="https://www.tannatthaphon.online/js/main.js"></script>
+  <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
+  <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
+  <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
+  <script src="https://www.tannatthaphon.online/smooth.js"></script>
     </body>
 </html>
