--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <style>@view-transition { navigation: auto; }</style> 
  </head>
  <body>
-  <div data-include="https://www.tannatthaphon.online/partials/header.html"></div>
+  <div data-include="www.tannatthaphon.online/partials/header.html"></div>
 
 <script src="https://www.tannatthaphon.online/js/include.js"></script>
 
