--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
   <style>@view-transition { navigation: auto; }</style> 
  </head>
- <body>
-  <div data-include="www.tannatthaphon.online/partials/header.html"></div>
+<body>
+  <div data-include="https://www.tannatthaphon.online/partials/header.html"></div>
 
 <script src="https://www.tannatthaphon.online/js/include.js"></script>
 
