--- a/about/vision.html
+++ b/about/vision.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>คริสตจักรสาวกพระเยซูกรุงเทพ | หน้าแรก</title>
+  <title>คริสตจักรสาวกพระเยซูกรุงเทพ | นิมิตและพัธกิจ</title>
   <meta name="description" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok) คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.tannatthaphon.online/">
@@ -86,7 +86,7 @@
        MAIN BODY CONTENT (ส่วนเนื้อหาหลัก)
   ======================================== -->
   <main class="main-content">
-    <h1>นี่คือหน้าแรก</h1>
+    <h1>นี่คือหน้านิมิตและพัธกิจ</h1>
   </main>
   <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
 
@@ -99,4 +99,5 @@
   <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
   <script src="https://www.tannatthaphon.online/smooth.js"></script>
     </body>
+
 </html>
