--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
   <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
   <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
   <script src="https://www.tannatthaphon.online/smooth.js"></script>
+  <div data-include="https://www.tannatthaphon.online/partials/cookie-banner.html"></div>
     </body>
 
 </html>
+
