--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
   <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
   <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
   <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
-  <script src="https://www.tannatthaphon.online/smooth.js"></script>
+  <script src="https://www.tannatthaphon.online/js/smooth.js"></script>
   
     </body>
 
 </html>
+
 
 
