--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h1>นี่คือหน้าแรก</h1>
   </main>
   <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
-  <div data-include="https://www.tannatthaphon.online/partials/cookie-banner.html"></div>
+  <div data-include="/partials/cookie-banner.html"></div>
   <script>
     
   </script>
@@ -102,6 +102,7 @@
     </body>
 
 </html>
+
 
 
 
