--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
   <meta name="twitter:title" content="คริสตจักรสาวกพระเยซูกรุงเทพ (JDM Bangkok)">
   <meta name="twitter:description" content="นมัสการวันอาทิตย์ 10:00–12:00 น.">
   <meta name="twitter:image" content="https://www.tannatthaphon.online/og-cover.webp">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.tannatthaphon.online/assets/images/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="https://www.tannatthaphon.online/assets/images/faicon.svg">
+  <link rel="shortcut icon" href="https://www.tannatthaphon.online/assets/images/faicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://www.tannatthaphon.online/assets/images/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-title" content="JDM BKK">
-  <link rel="manifest" href="../assets/images/site.webmanifest">
-  <script src="../js/sdk.js"></script>
+  <link rel="manifest" href="https://www.tannatthaphon.online/assets/images/site.webmanifest">
+  <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -43,8 +43,8 @@
     "alternateName": ["JDM Bangkok", "JDMBKK", "JDM TH"],
     "description": "คริสตจักรท้องถิ่นย่านรามคำแหง นมัสการวันอาทิตย์ 10:00–12:00 น.",
     "url": "https://www.tannatthaphon.online/",
-    "logo": "https://www.tannatthaphon.online/logo.png",
-    "image": "https://www.tannatthaphon.online/cover.webp",
+    "logo": "https://www.tannatthaphon.online/assets/images/faicon.svg",
+    "image": "https://www.tannatthaphon.online/og-cover.webp",
     "telephone": "+66 92 552 0263",
     "hasMap": "https://maps.google.com/?q=13.753303,100.619074",
     "address": {
@@ -101,6 +101,7 @@
     </body>
 
 </html>
+
 
 
 
