--- a/index.html
+++ b/index.html
@@ -86,7 +86,133 @@
        MAIN BODY CONTENT (ส่วนเนื้อหาหลัก)
   ======================================== -->
   <main class="main-content">
-    <h1>นี่คือหน้าแรก</h1>
+    <div class="hero">
+   <div class="hero-content">
+    <img src="https://www.tannatthaphon.online/assets/images/faicon.svg" alt="โลโก้คริสตจักรสาวกพระเยซูกรุงเทพ" class="hero-icon">
+    <h1>รู้จักพระเยซูคริสต์</h1>
+    <p>ค้นพบความรัก ความหวัง และชีวิตใหม่ในพระองค์</p>
+    <div class="cta-buttons"><a href="#who" class="btn btn-primary">✝️ พระเยซูคือใคร</a> <a href="#salvation" class="btn btn-outline">💝 รับความรอด</a>
+    </div>
+   </div>
+  </div><!-- Who is Jesus Section -->
+  <section id="who">
+   <div class="container">
+    <h2 class="section-title">✝️ พระเยซูคริสต์คือใคร</h2>
+    <div class="intro-card">
+     <h3>พระบุตรของพระเจ้า ผู้ช่วยให้รอดของโลก</h3>
+     <p>พระเยซูคริสต์คือพระบุตรของพระเจ้า ผู้ทรงสร้างสวรรค์และแผ่นดินโลก พระองค์ทรงรักมนุษย์มากจนยอมสละพระชนม์ชีพบนไม้กางเขน เพื่อรับโทษแทนบาปของเราทุกคน</p>
+     <p>พระเยซูทรงกลับคืนพระชนม์ในวันที่สาม พิสูจน์ว่าพระองค์ทรงมีฤทธิ์เหนือความตาย และทรงเปิดทางให้เราได้มีความสัมพันธ์กับพระเจ้า และมีชีวิตนิรันดร์</p>
+     <div class="verse">
+      "เพราะว่าพระเจ้าทรงรักโลก จนได้ทรงประทานพระบุตรองค์เดียวของพระองค์ เพื่อทุกคนที่วางใจในพระบุตรนั้นจะไม่พินาศ แต่มีชีวิตนิรันดร์" <span class="verse-ref">— ยอห์น 3:16</span>
+     </div>
+    </div>
+   </div>
+  </section><!-- Why Jesus Section -->
+  <section style="background: var(--surface-dark);">
+   <div class="container">
+    <h2 class="section-title">💝 ทำไมเราจึงต้องการพระเยซู</h2>
+    <div class="why-grid">
+     <div class="why-card"><span class="why-icon">💔</span>
+      <h3>เราทุกคนมีบาป</h3>
+      <p>ทุกคนล้วนทำบาปและห่างไกลจากพระเจ้า ไม่มีใครสมบูรณ์แบบ บาปทำให้เราแยกจากพระเจ้าและนำไปสู่ความตาย</p>
+     </div>
+     <div class="why-card"><span class="why-icon">✝️</span>
+      <h3>พระเยซูจ่ายค่าไถ่</h3>
+      <p>พระเจ้าทรงรักเรามาก จึงส่งพระเยซูมาตายแทนเรา พระองค์รับโทษบาปของเราทั้งหมด เพื่อเราจะได้รอด</p>
+     </div>
+     <div class="why-card"><span class="why-icon">🎁</span>
+      <h3>ของประทานฟรี</h3>
+      <p>ความรอดเป็นของประทานจากพระเจ้า ไม่ใช่สิ่งที่เราทำได้ด้วยตัวเอง เราได้รับโดยความเชื่อในพระเยซูเท่านั้น</p>
+     </div>
+     <div class="why-card"><span class="why-icon">🕊</span>
+      <h3>สันติสุขที่แท้จริง</h3>
+      <p>เมื่อเรารับพระเยซู เราจะได้รับสันติสุข ความชื่นชมยินดี และชีวิตที่มีความหมายในพระองค์</p>
+     </div>
+     <div class="why-card"><span class="why-icon">👨‍👩‍👧‍👦</span>
+      <h3>เป็นบุตรของพระเจ้า</h3>
+      <p>เราจะกลายเป็นบุตรของพระเจ้า มีความสัมพันธ์ใกล้ชิดกับพระองค์ และมีครอบครัวฝ่ายวิญญาณที่รักเรา</p>
+     </div>
+     <div class="why-card"><span class="why-icon">👑</span>
+      <h3>ชีวิตนิรันดร์</h3>
+      <p>เราจะได้รับชีวิตนิรันดร์กับพระเจ้าในสวรรค์ ไม่มีความเจ็บปวด ไม่มีน้ำตา มีแต่ความสุขตลอดไป</p>
+     </div>
+    </div>
+   </div>
+  </section><!-- How to be Saved Section -->
+  <section id="salvation">
+   <div class="container">
+    <h2 class="section-title">🙏 จะรับพระเยซูได้อย่างไร</h2>
+    <div class="steps-container">
+     <div class="step-card">
+      <div class="step-number">
+       1
+      </div>
+      <div class="step-content">
+       <h3>ยอมรับว่าเป็นคนบาป</h3>
+       <p>ยอมรับว่าเราทำบาปและต้องการพระผู้ช่วยให้รอด เราไม่สามารถช่วยตัวเองให้พ้นจากบาปได้</p>
+       <div class="verse-small">
+        "เพราะว่าทุกคนได้ทำบาป และเสื่อมจากพระสิริของพระเจ้า" — โรม 3:23
+       </div>
+      </div>
+     </div>
+     <div class="step-card">
+      <div class="step-number">
+       2
+      </div>
+      <div class="step-content">
+       <h3>เชื่อในพระเยซูคริสต์</h3>
+       <p>เชื่อว่าพระเยซูคริสต์ทรงตายเพื่อบาปของเรา และทรงกลับคืนพระชนม์ พระองค์คือทางเดียวที่จะได้รับความรอด</p>
+       <div class="verse-small">
+        "เพราะว่าค่าจ้างของบาปคือความตาย แต่ของประทานของพระเจ้าคือชีวิตนิรันดร์" — โรม 6:23
+       </div>
+      </div>
+     </div>
+     <div class="step-card">
+      <div class="step-number">
+       3
+      </div>
+      <div class="step-content">
+       <h3>กลับใจและรับพระองค์</h3>
+       <p>หันกลับจากบาป ขอให้พระเยซูเข้ามาในชีวิต และยอมให้พระองค์เป็นองค์พระผู้เป็นเจ้าของชีวิตเรา</p>
+       <div class="verse-small">
+        "แต่ทุกคนที่ได้รับพระองค์ พระองค์ก็ประทานสิทธิ์ให้เป็นบุตรของพระเจ้า" — ยอห์น 1:12
+       </div>
+      </div>
+     </div>
+     <div class="step-card">
+      <div class="step-number">
+       4
+      </div>
+      <div class="step-content">
+       <h3>ดำเนินชีวิตใหม่กับพระองค์</h3>
+       <p>เริ่มต้นชีวิตใหม่ในพระเยซู อ่านพระคัมภีร์ อธิษฐาน ร่วมนมัสการกับคริสตจักร และเติบโตในความเชื่อ</p>
+       <div class="verse-small">
+        "เหตุฉะนั้นถ้าผู้ใดอยู่ในพระคริสต์ ผู้นั้นก็เป็นคนที่ถูกสร้างใหม่" — 2 โครินธ์ 5:17
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </section><!-- Prayer Section -->
+  <section style="background: var(--surface-dark);">
+   <div class="container">
+    <div class="prayer-box">
+     <h3>🙏 คำอธิษฐานรับพระเยซู</h3>
+     <p class="prayer-cta">หากคุณพร้อมที่จะรับพระเยซูเข้ามาในชีวิต คุณสามารถอธิษฐานตามคำนี้:</p>
+     <div class="prayer-text">
+      <p style="margin-bottom: 15px;"><strong>ข้าแต่พระเจ้า</strong></p>
+      <p style="margin-bottom: 15px;">ข้าพเจ้ายอมรับว่าข้าพเจ้าเป็นคนบาป และต้องการพระผู้ช่วยให้รอด</p>
+      <p style="margin-bottom: 15px;">ข้าพเจ้าเชื่อว่าพระเยซูคริสต์ทรงตายบนไม้กางเขนเพื่อบาปของข้าพเจ้า และทรงกลับคืนพระชนม์</p>
+      <p style="margin-bottom: 15px;">ข้าพเจ้าขอเชิญพระเยซูเข้ามาในชีวิตของข้าพเจ้า และยอมให้พระองค์เป็นองค์พระผู้เป็นเจ้า</p>
+      <p>โปรดยกโทษบาปของข้าพเจ้า และประทานชีวิตนิรันดร์แก่ข้าพเจ้า ข้าพเจ้าขอดำเนินชีวิตตามพระทัยของพระองค์</p>
+      <p style="margin-top: 20px;"><strong>ในพระนามพระเยซูคริสต์ อาเมน</strong></p>
+     </div>
+     <p style="font-size: 1.1rem; line-height: 1.8;">หากคุณได้อธิษฐานคำนี้ด้วยความจริงใจ<br>
+       ยินดีต้อนรับสู่ครอบครัวของพระเจ้า! 🎉<br>
+       คุณเป็นบุตรของพระเจ้าแล้ว และมีชีวิตนิรันดร์</p>
+    </div>
+   </div>
+  </section>
   </main>
   <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
   <script>
@@ -101,6 +227,7 @@
     </body>
 
 </html>
+
 
 
 
