--- a/contact/pray.html
+++ b/contact/pray.html
@@ -86,7 +86,50 @@
        MAIN BODY CONTENT (ส่วนเนื้อหาหลัก)
   ======================================== -->
   <main class="main-content">
-    <h1>นี่คือหน้าฝากเราอธิษฐาน</h1>
+    <section class="prayer-request-section" style="padding: 60px 20px;">
+    <div class="container">
+      <div class="prayer-request-intro">
+        <h2 class="section-title">ขอคำอธิษฐานเผื่อคุณ</h2>
+        <p>
+        เราเชื่อในพลังของการอธิษฐานและอยากยืนเคียงข้างคุณ ไม่ว่าคุณจะเผชิญกับความท้าทายใด ๆ
+        โปรดแบ่งปันคำขออธิษฐานของคุณกับเรา ทีมงานของเรายินดีที่จะอธิษฐานเผื่อคุณ
+        เพราะพระเจ้าทรงรักคุณและทรงฟังเสียงของคุณเสมอ
+        </p>
+      </div>
+    <div class="prayer-request-container">
+     <div class="prayer-request-card">
+      <form id="prayerForm">
+       <div class="form-group"><label for="prayer-name">ชื่อของคุณ</label> <input type="text" id="prayer-name" class="form-control" placeholder="กรอกชื่อของคุณ" required>
+       </div>
+       <div class="form-group"><label for="prayer-email">อีเมล (ถ้ามี)</label> <input type="email" id="prayer-email" class="form-control" placeholder="your@email.com">
+       </div>
+       <div class="form-group"><label for="prayer-request">คำขออธิษฐาน</label> <textarea id="prayer-request" class="form-control" placeholder="แบ่งปันสิ่งที่ต้องการให้เราอธิษฐานเผื่อ..." required rows="6"></textarea>
+       </div><button type="submit" class="btn btn-primary" style="width: 100%;">🙏 ส่งคำขออธิษฐาน</button>
+       <div id="prayerSuccess" class="form-success"><strong>✅ ส่งคำขออธิษฐานสำเร็จ!</strong><br>
+         เราจะอธิษฐานเผื่อคุณ พระเจ้าทรงรักคุณ ❤️
+       </div>
+      </form>
+     </div>
+     <div class="prayer-info-card">
+      <div class="prayer-info-icon">
+       📖
+      </div>
+      <h3>พระเจ้าทรงฟัง</h3>
+      <p>"ถ้าเราทูลขออะไรตามพระทัยของพระองค์ พระองค์ก็ทรงสดับเรา" <br><strong>— 1 ยอห์น 5:14</strong></p>
+      <div class="prayer-info-icon" style="margin-top: 30px;">
+       💪
+      </div>
+      <h3>พระองค์ทรงเข้มแข็ง</h3>
+      <p>"จงมอบภาระของท่านไว้กับพระเจ้า และพระองค์จะทรงค้ำจุนท่าน" <br><strong>— สดุดี 55:22</strong></p>
+      <div class="prayer-info-icon" style="margin-top: 30px;">
+       🌟
+      </div>
+      <h3>พระองค์ทรงสัตย์ซื่อ</h3>
+      <p>"พระองค์ทรงให้เรามีความหวัง และอนาคตที่ดี" <br><strong>— เยเรมีย์ 29:11</strong></p>
+     </div>
+    </div>
+   </div>
+  </section>
   </main>
   <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
 
@@ -101,3 +144,4 @@
     </body>
 
 </html>
+
